✨ feat(购物车): 实现结算流程集成
  - 创建结算页面跳转逻辑
  - 实现选中商品数据传递
  - 添加库存不足检查和阻止结算
  - 实现结算前数据验证
  - 添加结算状态保持机制

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,7 +4,8 @@
     "pages/category/index",
     "pages/cart/index",
     "pages/profile/index",
-    "pages/product-detail/index"
+    "pages/product-detail/index",
+    "pages/checkout/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
